src/test/deca/context/valid/created/objet/return.deca
//Description
//      test return
//Resultat
//      ok

class A {
    int x ;
    int get() {
        int a = 1;
        return a;
    }
}