src/test/deca/context/invalid/created/objet/return2.deca
// description :
//      methode qui retourne un objet
// Resultat
//      Ligne 10 : methode ne retourne pas un type correct

class A {
    int x ;
    int get() {
        float a ;
        return a ;
    }
}